@@ -1120,4 +1120,5 @@ November 30-?? 2011
 	* Slide a TH1S under the hood of a CGamma1DW
 	* Slide a TH2C under the hood of CGamma2DB
 	* Slide a TH2I under the hood of CGamma2DL
+	* Slide a TH2S under the hood of CGamma2DW
 
